<resources>
    <string name="app_name">InfiniList</string>

    <!-- action bar menu items -->
    <string name="action_add">New Item</string>
    <string name="action_uncheck_all">Uncheck All</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_mark_widget">Link to Widget</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_paste">Paste</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <!-- context menu items -->
    <string name="item_edit">Edit</string>
    <string name="item_addsub">Add Sub-Item</string>
    <string name="item_move_to_top">Move to Top</string>
    <string name="item_move_to_bottom">Move to Bottom</string>
    <string name="item_copy">Copy</string>
    <string name="item_cut">Cut</string>
    <string name="item_paste_into">Paste Into</string>
    <string name="item_delete">Delete</string>
    <string name="item_mark_sub_widget">Link Sub-list to Widget</string>
    <string name="item_select">Select</string>
    <string name="item_deselect">Deselect</string>
    <string name="item_share">Share</string>

    <!-- selection action mode menu items -->
    <string name="selection_delete">Delete Selection</string>
    <string name="selection_copy">Copy Selection</string>
    <string name="selection_cut">Cut Selection</string>
    <string name="selection_title">Selection (%1$d/%2$d)</string>

    <!-- Dialog labels -->
    <string name="dialogPositiveButton">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Add/Edit dialog labels -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="editTitle_add">Add Item</string>
    <string name="editTitle_edit">Edit Item</string>
    <string name="editPositiveButton_add">Add</string>
    <string name="attop">At Top</string>

    <!-- Delete dialog labels -->
    <string name="delete_all">Delete ALL Items?</string>
    <plurals name="delete_with_children">
        <item quantity="one">Delete Item with Sub-Item?</item>
        <item quantity="other">Delete Item with %d Sub-Items?</item>
    </plurals>

    <!-- Import dialog labels -->
    <string name="import_title">Import</string>
    <string name="import_type_question">Do you want the import to\n\t• append a new item, or\n\t• overwrite all existing items?</string>
    <string name="import_append">Append</string>
    <string name="import_overwrite">Overwrite</string>
    <string name="import_overwrite_confirm">Are you sure you want to overwrite?\nThis will delete all existing items.</string>
    <string name="import_overwrite_yes">Yes Overwrite</string>
    <string name="import_overwrite_no">No Append</string>

    <!-- Toast strings -->
    <string name="toast_widget_accepted">Accepted</string>
    <string name="toast_widget_refused">Refused: the list is empty</string>
    <string name="toast_cant_descend_in_sel_mode">This action is dissabled in select mode</string>
    <plurals name="toast_copied">
        <item quantity="one">Copied 1 item</item>
        <item quantity="other">Copied %d items</item>
    </plurals>
    <string name="toast_export">File Exported</string>
    <string name="toast_export_failed">File Export Failed</string>
    <string name="toast_item_appended">Appended item "%1$s"</string>

    <string name="share_title">Share List</string>

    <!-- Help text -->
    <string name="help_title">Help</string>
    <string name="help_dismiss">Dismiss</string>
    <string name="help_item_handle">1. Item handle: Drag to manually reorder the list. Tap to cycle the item flag.</string>
    <string name="help_item_body">2. Item body: Displays the item title and description. Long-press for the item\'s context menu.</string>
    <string name="help_sub_item">3. Sub-item count: Indicates that this item has sub-items, and how many. Tap to descend into this sub-list.</string>
    <string name="help_add_item_title">Adding a new item</string>
    <string name="help_add_item_body">To add a new item tap the plus icon on the action bar at the top of the screen.</string>
    <string name="help_sub_list_title">Creating a Sub-list</string>
    <string name="help_sub_list_body">To create a sub-list within an item select \"Add Sub-item\" from the item\'s context menu.</string>
    <string name="help_widget_title">Widget List</string>
    <string name="help_widget_body">To set which list is displayed in a widget either select \"Link Sub-list to Widget\" from the list\'s context menu or select \"Link to Widget\" from the app menu when the list is displayed.</string>

    <!-- ContentProvider Permission -->
    <string name="widget_read_permission_name">uk.sensoryunderload.infinilist.WIDGET_READ</string>
    <string name="widget_read_permission_label">Widget-read permission</string>
    <string name="widget_read_permission_description">Permission for the @string/app_name widget to read the configured list for display.</string>
</resources>
