<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/edit"
        android:title="@string/item_edit" />
    <item
        android:id="@+id/addsub"
        android:title="@string/item_addsub" />
    <item
        android:id="@+id/move_to_top"
        android:title="@string/item_move_to_top" />
    <item
        android:id="@+id/move_to_bottom"
        android:title="@string/item_move_to_bottom" />
   <item
        android:id="@+id/delete"
        android:title="@string/item_delete" />
    <item
        android:id="@+id/select"
        android:title="@string/item_select" />
    <item
        android:id="@+id/copy"
        android:title="@string/item_copy" />
    <item
        android:id="@+id/cut"
        android:title="@string/item_cut" />
    <item
        android:id="@+id/paste_into"
        android:title="@string/item_paste_into" />
    <item
        android:id="@+id/share"
        android:title="@string/item_share" />
    <item
        android:id="@+id/mark_sub_widget"
        android:title="@string/item_mark_sub_widget" />
</menu>
