<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.sensoryunderload.infinilist.ListView">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_icon"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="?attr/actionModeShareDrawable"
        android:title="@string/item_share"
        app:showAsAction="ifRoom" />
<!--    <item
        android:id="@+id/action_order"
        android:title="@order"
            app:showAsAction="never" /> -->
    <item
        android:id="@+id/action_uncheck_all"
        android:title="@string/action_uncheck_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mark_widget"
        android:title="@string/action_mark_widget"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paste"
        android:title="@string/action_paste"
        app:showAsAction="never" />
<!--    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /> -->
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>
